fixed overflow of iframe

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -130,6 +130,7 @@ nav {
 
 	#location iframe{
 		margin-top: 20px;
+		max-width: 100%;
 	}
 
 #contact{
